fix sur product3.html

--- a/ui/src/main/resources/static/product3.html
+++ b/ui/src/main/resources/static/product3.html
@@ -32,10 +32,9 @@
         </ul>
         <form >
             <input type="text" v-model="formulaireNom"  size="30"
-                   placeholder="Name">
+                   placeholder="Nom">
             <input type="number" v-model="formulaireQuantite"  size="30"
                    placeholder="Quantite">
-<!--            <input class="btn-primary" type="submit" value="add" @click="submit">-->
             <button @click.prevent="ajouteProduit">add</button>
         </form>
 
