--- a/ui/src/main/resources/static/product3.html
+++ b/ui/src/main/resources/static/product3.html
@@ -39,7 +39,8 @@
         <tr>
             <th scope="col">Nom</th>
             <th scope="col">Code</th>
-            <th scope="col">quantite</th>
+            <th scope="col">Quantite</th>
+            <th scope="col">Action</th>
         </tr>
         </thead>
         <tbody>
@@ -47,6 +48,12 @@
             <td>{{product.nom}}</td>
             <td>{{product.code}}</td>
             <td>{{product.quantite}}</td>
+            <td>
+                <div class="btn-group" role="group" aria-label="Basic example">
+                    <button class="btn btn-primary" @click.prevent="ajouteProduitMontant(product.code,product.quantite)">+</button>
+                    <button class="btn btn-primary" @click.prevent="diminueProduitMontant(product.code,product.quantite)">-</button>
+                </div>
+            </td>
         </tr>
         </tbody>
     </table>
